--- a/zxspectrum/README
+++ b/zxspectrum/README
@@ -8,3 +8,7 @@
 
 -gusano.tap: a funny game located in Space...
 
+-attack-inves.tap: basic game from a 3rd party but modified by David to run on Inves Spectrum+
+
+-64chars-inves.tap: program to get 64 characters from a 3rd party but modified by David to run on Inves Spectrum+
+
